fixed: html rendered incorrectly in comment plugin, text not clearing once comment submitted, added some margin/paddings for readability, inline admin edit was not saving (sql error)

--- a/plugins/fabrik_form/comment/comments.css
+++ b/plugins/fabrik_form/comment/comments.css
@@ -1,7 +1,11 @@
 #fabrik-comment-list{
-/* 	list-style:none;
-	padding:0;
-	margin:0; */
+ 	list-style: none;
+	padding: 0;
+	margin :7px 0;
+}
+
+#fabrik-comment-list .comment-content {
+	margin: 7px 0;
 }
 
 .inlineEdit {
